# coldpipe

./: .env.example  .gitignore  .mcp.json  Dockerfile  Makefile  README.md  coldpipe_mcp.py  docker-compose.yml  piccolo_app.py  piccolo_conf.py  pyproject.toml  ruff.toml  scrape_emails.py  seed_demo.py
.claude/skills/coldpipe/: SKILL.md
.github/workflows/: ci.yml
cli/: __init__.py  __main__.py  auto.py  campaign.py  daemon.py  deals.py  enrich.py  leads.py  mailbox.py  scrape.py  send.py  setup.py  status.py  track.py  validate.py
config/: __init__.py  coldpipe.toml.example  dentists.toml.example  settings.py
data/templates/: breakup.txt  cold_intro.txt  followup_1.txt  followup_2.txt
db/: __init__.py  migrate.py  models.py  queries.py  schema.sql  tables.py
email_engine/: __init__.py  bounces.py  personalize.py  queue.py  replies.py  sender.py
mailer/: __init__.py  bounces.py  personalize.py  queue.py  replies.py  sender.py  sequences.py  templates.py  triage.py
scrapers/: __init__.py  base.py  csv_import.py  dedup.py  directories.py  exa_search.py  google_maps.py  website_enricher.py
shared/: constants.py  crypto.py  csv_io.py  email_utils.py  http.py  patterns.py  scoring.py  scraping.py  toml_writer.py
tests/: conftest.py  test_bounces.py  test_cli.py  test_db.py  test_dedup.py  test_email_engine.py  test_mailer.py  test_personalization.py  test_scrapers.py
tools/: deduplicate.py  enrich.py  outreach.py  validate.py
tui/: __init__.py  __main__.py  app.py  coldpipe.tcss  dentists.tcss
tui/screens/: campaigns.py  dashboard.py  leads.py  pipeline.py  settings.py
tui/widgets/: campaign_progress.py  funnel.py  lead_table.py  stage_column.py  stat_card.py
web/: app.py  helpers.py  server.py
web/controllers/: __init__.py  activity.py  auth.py  campaigns.py  dashboard.py  deals.py  emails.py  leads.py  mailboxes.py  onboarding.py  settings.py
web/middleware/: auth.py  csrf.py  rate_limit.py  security_headers.py
web/templates/: base.html  dashboard.html  settings.html
web/templates/_macros/: components.html
web/templates/_partials/: nav.html  pagination.html
web/templates/activity/: list.html
web/templates/auth/: login.html  register.html
web/templates/campaigns/: detail.html  list.html
web/templates/deals/: list.html  pipeline.html
web/templates/emails/: list.html
web/templates/errors/: 404.html  500.html
web/templates/leads/: detail.html  list.html
web/templates/mailboxes/: form.html  list.html
web/templates/onboarding/: wizard.html
