[project]
name = "coldpipe"
version = "2.0.0"
description = "Customer Acquisition Engine"
requires-python = ">=3.13"
dependencies = [
    "aiohttp~=3.13",
    "lxml~=5.4",
    "aiodns~=4.0",
    "aiosmtplib~=5.1",
    "typer~=0.23",
    "rich~=14.3",
    "textual~=7.5",
    "aiosqlite~=0.22",
    "msgspec~=0.20",
    "crawl4ai~=0.8",
    "anthropic~=0.79",
    "jinja2~=3.1",
    "aioimaplib~=2.0",
    "rapidfuzz~=3.14",
    "apscheduler>=4.0a1,<5",
    "pydantic-settings~=2.12",
    "structlog~=25.5",
    "exa-py~=2.4",
    "cryptography~=46.0",
    "aiohttp-jinja2~=1.6",
]

[project.scripts]
coldpipe = "cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "db", "scrapers", "mailer", "tui", "config", "shared", "tools", "web"]

[dependency-groups]
dev = [
    "ruff~=0.15",
    "pyright~=1.1",
    "pytest~=9.0",
    "pytest-asyncio~=1.3",
]
